k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-api
  namespace: default
spec:
  selector:
    app: telemetry-api
  ports:
    - port: 80
      targetPort: 8000
